[project]
    name            = "gdl90py"
    version         = "0.1.0"
    description     = "GDL90 Python library"
    authors         = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    readme          = "README.md"
    requires-python = ">=3.12"
    dependencies    = ["bitstring==4.3.1"]

[dependency-groups]
    dev = [
        "pytest==9.0.1",
        "pytest-cov==7.0.0",
        "pre-commit==4.5.0",
    ]

[tool.uv]
    package = true

[tool.coverage.run]
    omit = ["tests/*"]

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
