[project]
    name            = "gdl90py"
    version         = "0.1.0"
    description     = "GDL90 Python library"
    authors         = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    readme          = "README.md"
    requires-python = ">=3.12"
    dependencies    = ["bitstring==4.4.0"]

[dependency-groups]
    dev = [
        "pytest==9.0.3",
        "pytest-cov==7.1.0",
        "pre-commit==4.5.1",
    ]

[tool.uv]
    package = true

[tool.coverage.run]
    omit = ["tests/*"]

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
